Optimised price checking, fixed items snapshot